# Corpus2Skill

./: .gitignore  LICENSE  README.md  pyproject.toml
corpus2skill/: __init__.py  __main__.py  clustering.py  compile.py  config.py  eval.py  metrics.py  serve.py  skill_builder.py  summarizer.py
docs/: anthropic-skills-corpus2skill-analysis.md  openai-hosted-shell-safety-q-and-a.md  openai-responses-skills-local-tools-q-and-a.md  openai-skills-alternative-analysis.md  progressive-disclosure-q-and-a.md
scripts/: prepare_wixqa.py
