[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "corpus2skill"
version = "0.1.0"
description = "Distill a document corpus into a navigable skill hierarchy for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Corpus2Skill Authors" },
]
keywords = ["rag", "retrieval", "llm", "skills", "anthropic", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.0",
    "nltk>=3.8.0",
    "rouge-score>=0.1.2",
]

[project.optional-dependencies]
data = [
    "datasets>=2.14.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[project.urls]
Repository = "https://github.com/YOUR_USERNAME/Corpus2Skill"
Issues = "https://github.com/YOUR_USERNAME/Corpus2Skill/issues"

[tool.setuptools.packages.find]
include = ["corpus2skill*"]

[tool.ruff]
line-length = 100
target-version = "py310"
